--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction.vbproj
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction.vbproj
@@ -80,6 +80,12 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Intro_Form.Designer.vb">
+      <DependentUpon>Intro_Form.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Intro_Form.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -99,6 +105,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Intro_Form.resx">
+      <DependentUpon>Intro_Form.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -121,6 +130,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Muscle Man.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Running.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
