--- a/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction.vbproj
+++ b/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction/Anatomy_Muscle_Contraction.vbproj
@@ -73,11 +73,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="Landing.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="Landing.Designer.vb">
+      <DependentUpon>Landing.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Intro_Form.Designer.vb">
@@ -101,10 +101,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Question1.Designer.vb">
+      <DependentUpon>Question1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Question1.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <EmbeddedResource Include="Landing.resx">
+      <DependentUpon>Landing.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Intro_Form.resx">
       <DependentUpon>Intro_Form.vb</DependentUpon>
@@ -114,6 +120,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Question1.resx">
+      <DependentUpon>Question1.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +142,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Running.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Muscle Face.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
